[workspace]
resolver = "2"
members  = [
    # prod contracts
    "contracts/account-nft",
    "contracts/credit-manager",
    "contracts/swapper/*",
    "contracts/v2-zapper/*",
    "contracts/health",

    # mock contracts
    "contracts/mock-credit-manager",
    "contracts/mock-health",
    "contracts/mock-incentives",
    "contracts/mock-oracle",
    "contracts/mock-red-bank",
    "contracts/mock-vault",

    # packages
    "packages/account-nft-types",
    "packages/health-computer",
    "packages/health-types",
    "packages/rover",
]

[workspace.package]
version       = "2.0.0"
authors       = [
  "Gabe R. <gabe.r@delphilabs.io>",
  "Larry Engineer <larry@delphidigital.io>",
  "Piotr B. <piotr@delphilabs.io>",
  "Brianna M. <brianna@delphilabs.io>"
]
license       = "GPL-3.0-or-later"
edition       = "2021"
repository    = "https://github.com/mars-protocol/rover"
homepage      = "https://marsprotocol.io"
documentation = "https://docs.marsprotocol.io/"
keywords      = ["mars", "cosmos", "cosmwasm"]

[workspace.dependencies]
anyhow             = "1.0.75"
cosmwasm-schema    = "1.4.0"
cosmwasm-std       = "1.4.0"
cw2                = "1.1.0"
cw721              = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main" }
cw721-base         = { git = "https://github.com/CosmWasm/cw-nfts/", branch = "main", features = ["library"] }
cw-dex             = { version = "0.4.0", features = ["osmosis"] }
cw-multi-test      = "0.17.0"
cw-paginate        = "0.2.1"
cw-utils           = "1.0.1"
cw-storage-plus    = "1.1.0"
cw-vault-standard  = { version = "0.4.0", features = ["lockup", "force-unlock"] }
itertools          = "0.11.0"
osmosis-std        = "0.19.2"
osmosis-test-tube  = "19.2.0"
proptest           = "1.2.0"
schemars           = "0.8.12"
serde              = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json         = "1.0.107"
serde-wasm-bindgen = "0.6.0"
test-case          = "3.2.1"
thiserror          = "1.0.48"
tsify              = "0.4.5"
wasm-bindgen       = "0.2.87"

# mars packages
mars-account-nft-types     = { path = "./packages/account-nft-types" }
mars-health                = { git = "https://github.com/mars-protocol/red-bank", rev = "afaf815" }
mars-liquidation           = { git = "https://github.com/mars-protocol/red-bank", rev = "afaf815" }
mars-osmosis               = { git = "https://github.com/mars-protocol/red-bank", rev = "afaf815" }
mars-owner                 = { version = "2.0.0", features = ["emergency-owner"] }
mars-red-bank-types        = { git = "https://github.com/mars-protocol/red-bank", rev = "afaf815" }
mars-rover-health-computer = { path = "./packages/health-computer" }
mars-rover-health-types    = { path = "./packages/health-types" }
mars-rover                 = { path = "./packages/rover" }
# Old rover types used for migration (https://github.com/mars-protocol/v2-fields-of-mars/releases/tag/v1.0.0)
mars-rover-old             = { package = "mars-rover", git = "https://github.com/mars-protocol/v2-fields-of-mars", rev = "183e4c5" }

# contracts
mars-address-provider = { git = "https://github.com/mars-protocol/red-bank", rev = "afaf815", features = ["library"] }
mars-account-nft      = { path = "./contracts/account-nft", features = ["library"] }
mars-params           = { git = "https://github.com/mars-protocol/red-bank", rev = "afaf815", features = ["library"] }
mars-rover-health     = { path = "./contracts/health", features = ["library"] }
mars-swapper-base     = { path = "./contracts/swapper/base", features = ["library"] }
mars-zapper-base      = { path = "./contracts/v2-zapper/base", features = ["library"] }

# mocks
mars-mock-credit-manager = { path = "./contracts/mock-credit-manager", features = ["library"] }
mars-mock-incentives     = { path = "./contracts/mock-incentives", features = ["library"] }
mars-mock-oracle         = { path = "./contracts/mock-oracle", features = ["library"] }
mars-mock-red-bank       = { path = "./contracts/mock-red-bank", features = ["library"] }
mars-mock-vault          = { path = "./contracts/mock-vault", features = ["library"] }
mars-mock-rover-health   = { path = "./contracts/mock-health", features = ["library"] }
mars-swapper-mock        = { path = "./contracts/swapper/mock", features = ["library"] }
mars-zapper-mock         = { path = "./contracts/v2-zapper/mock", features = ["library"] }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
overflow-checks  = true
opt-level        = 3
panic            = "abort"
rpath            = false
