[package]
name          = "swapper-osmosis"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
keywords      = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
mars-osmosis    = { version = "0.1.0", path = "../../../../outposts/packages/chains/osmosis" }
osmosis-std     = "0.12"
osmo-bindings   = "0.5"
schemars        = { workspace = true }
swapper-base    = { workspace = true }
rover           = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
anyhow             = { workspace = true }
cw-multi-test      = { workspace = true }
osmo-bindings-test = "0.5"
